[package]
name = "gnix"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.127", features = ["derive"] }
pretty_env_logger = "0.4.0"
sanitize_html = "0.7.0"
lazy_static = "1.4"
confy = "0.4.0"
